// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing GifGrid should load <GifGrid /> correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    test category
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Testing GifGrid should load items when load useFetchGif hook 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    test category
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="GifExample"
      url="https://localhost/tests"
    />
  </div>
</Fragment>
`;
